[project]
name = "nlp-100"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "bitsandbytes>=0.45.5",
    "datasets>=3.5.0",
    "gensim>=4.3.3",
    "graphviz>=0.20.3",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "protobuf>=6.30.2",
    "pycountry>=24.6.1",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.0",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "transformers>4.24.0",
]
